# MNIST-in-every-framework

./: .gitignore  Cargo.toml  README.md  download_data.sh  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black-format.yml  ci-testing.yml  pylint.yml
flax-knowledge-competitions/: README.MD  README.md
flax-knowledge-competitions/datasets/: kaggle_mnist.py  kaggle_titanic.py
flax-knowledge-competitions/experiments/: digit_classifier.ipynb
flax-knowledge-competitions/models/: digit_classifier.py  survival_classifier.py
flax-knowledge-competitions/trainer/: digit_classifier_trainer.py  survival_classifier_trainer.py
haiku/: README.md  main.py  model.py  train.py
haiku-knowledge-competitions/: README.MD
haiku-knowledge-competitions/datasets/: kaggle_mnist.py
haiku-knowledge-competitions/experiments/: digit_classifier.ipynb
jax-knowledge-competitions/: README.MD
julia/: README.md  main.jl
lightning/: README.md  dataset.py  main.py  module.py
lightning-knowledge-competitions/: README.md  train_digit_classifier.py
numpy/: README.md  dataset.py  main.py  nn.py  train.py
pytorch/: README.md  main.py  model.py  trainer.py
rust/: README.md
src/: README.md  train.py  train_digit_classifier.py
src/datasets/: MNIST_kaggle.py  (+2 more)
tensorflow/: README.md  main.py
tests/: README.md  decorators.py  requirements.txt  test_basic.py  test_mnist_data.py
tf-knowledge-competitions/: README.md
torch-knowledge-competitions/: README.md
(+26 files in other folders)
