[package]
name = "MNIST-in-every-framework"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mnist_in_every_framework"
path = "rust/main.rs"

[dependencies]
ndarray = { version = "0.14", features = ["blas"] }
blas-src = { version = "0.6.1", features = ["openblas"] }
openblas-src = { version = "0.9", features = ["cblas", "system"] }
autograd = "1.1.1"
